# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,18 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import patientsRouter from "./patients";
+import doctorsRouter from "./doctors";
+import appointmentsRouter from "./appointments";
+import predictionsRouter from "./predictions";
+import analyticsRouter from "./analytics";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(patientsRouter);
+router.use(doctorsRouter);
+router.use(appointmentsRouter);
+router.use(predictionsRouter);
+router.use(analyticsRouter);
 
 export default router;
